[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plum-island"
version = "0.1.0"
description = "Proactive Land Uncovering & Monitoring — network scan orchestration platform"
readme = "readme.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "flask-appbuilder==4.8.1",
    "flask-Limiter==3.12",
    "APScheduler>=3.10.0",
    "netaddr>=0.9.0",
    "meilisearch>=0.28.0",
    "redis>=4.6.0",
    "PyYAML>=6.0",
    "pyfaup-rs==0.2.0",
    "pybgpranking2>=0.1",
    "pyipasnhistory>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/D4-project/Plum-Island"
Repository = "https://github.com/D4-project/Plum-Island"
"Bug Tracker" = "https://github.com/D4-project/Plum-Island/issues"

[tool.setuptools.packages.find]
where = ["webapp"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["webapp", "tools"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE", "SIM", "S", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"webapp/sql_upd/*.py" = ["ALL"]
"tools/*.py" = ["S", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests", "tools"]
python_files = ["test_*.py"]
addopts = ["--tb=short", "--strict-markers"]
markers = [
    "integration: requires live Kvrocks/Meilisearch",
    "unit: pure unit tests",
]
